2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* irq/Makefile.am: Remove all-local: $(ARCH).
	* network/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* vectors/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-10-22	Joel Sherrill <joel@OARcorp.com>

	PR 510/bsps
	* irq/irq.h: Add extern C wrapper.

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/p_clock.c, include/bsp.h, include/coverhd.h, irq/irq.c,
	irq/irq.h, irq/irq_asm.S, irq/irq_init.c, network/if_hdlcsubr.h,
	startup/bspstart.c, startup/setvec.c, vectors/vectors.h,
	vectors/vectors_init.c: URL for license changed.

2003-08-20	Joel Sherrill <joel@OARcorp.com>

	* clock/p_clock.c, network/if_hdlcsubr.h: Correct copyright statements.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* irq/Makefile.am: Reflect having moved automake/.
	* network/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* vectors/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.
