@@ -2,7 +2,6 @@
 ## $Id$
 ##
 
-
 PGM = $(ARCH)/network.rel
 
 C_FILES = network.c if_hdlcsubr.c
