@@ -2,12 +2,11 @@
 ## $Id$
 ##
 
-
 C_FILES = vectors_init.c
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 include_bspdir = $(includedir)/bsp
-include_bsp_HEADERS = vectors.h   
+include_bsp_HEADERS = vectors.h 
 
 S_FILES = vectors.S
 S_O_FILES = $(S_FILES:%.S=$(ARCH)/%.$(OBJEXT))
@@ -24,15 +23,17 @@ include $(top_srcdir)/../../../../automake/lib.am
 $(PGM): $(OBJS)
 	$(make-rel)
 
-$(PROJECT_INCLUDE)/bsp:
-	$(mkinstalldirs) $@
-
-$(PROJECT_INCLUDE)/bsp/%.h: %.h
-	$(INSTALL_DATA) $< $@
-
-PREINSTALL_FILES = $(PROJECT_INCLUDE)/bsp \
-   $(include_bsp_HEADERS:%=$(PROJECT_INCLUDE)/bsp/%)
-
 all-local: $(PREINSTALL_FILES) $(OBJS)
+
+PREINSTALL_FILES =
+
+$(PROJECT_INCLUDE)/bsp/$(dirstamp):
+	@$(mkinstalldirs) $(PROJECT_INCLUDE)/bsp
+	@: > $(PROJECT_INCLUDE)/bsp/$(dirstamp)
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/bsp/$(dirstamp)
+
+$(PROJECT_INCLUDE)/bsp/vectors.h: vectors.h $(PROJECT_INCLUDE)/bsp/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/bsp/vectors.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/bsp/vectors.h
 
 include $(top_srcdir)/../../../../automake/local.am
