@@ -13,10 +13,11 @@ BSP_PIECES = clock irq start startup console vectors $(NETWORKING)
 #              mpc8xx/mmu mpc8xx/timer mpc8xx/vectors
 
 # bummer; have to use $foreach since % pattern subst rules only replace 1x
-OBJS = $(foreach piece, $(BSP_PIECES), $(wildcard ../$(piece)/$(ARCH)/*.$(OBJEXT))) \
-    $(wildcard ../../../../libcpu/$(RTEMS_CPU)/shared/*/$(ARCH)/*.$(OBJEXT)) \
-    ../@exceptions@/$(ARCH)/rtems-cpu.rel \
-    $(wildcard ../../../../libcpu/$(RTEMS_CPU)/mpc8260/*/$(ARCH)/*.$(OBJEXT)) 
+OBJS = $(foreach piece, $(BSP_PIECES), $(wildcard \
+    ../$(piece)/$(ARCH)/*.$(OBJEXT))) $(wildcard \
+    ../../../../libcpu/$(RTEMS_CPU)/shared/*/$(ARCH)/*.$(OBJEXT)) \
+    ../@exceptions@/$(ARCH)/rtems-cpu.rel $(wildcard \
+    ../../../../libcpu/$(RTEMS_CPU)/mpc8260/*/$(ARCH)/*.$(OBJEXT)) 
 LIB = $(ARCH)/libbsp.a
 
 include $(top_srcdir)/../../../../automake/compile.am
